[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
color-eyre = { workspace = true }
tokio = { version = "1.35.0", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }

[[bin]]
name = "tempo"
path = "src/main.rs"
