[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
color-eyre = { workspace = true }
bytes = "1.5.0"
thiserror = "1.0.50"
